--- a/src/DatabaseHandler/DatabaseHandler.csproj
+++ b/src/DatabaseHandler/DatabaseHandler.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.12" />
+    <PackageReference Include="NRedisStack" Version="0.13.1" />
+  </ItemGroup>
+
 </Project>
