--- a/src/SaalGalleryApi/SaalGalleryApi.csproj
+++ b/src/SaalGalleryApi/SaalGalleryApi.csproj
@@ -10,12 +10,14 @@
     <PackageReference Include="JWT" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NRedisStack" Version="0.13.1" />
     <PackageReference Include="Scrutor" Version="6.0.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
+    <PackageReference Include="Supabase" Version="1.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DatabaseHandler\DatabaseHandler.csproj" />
     <ProjectReference Include="..\OpenTelemetryTool\OpenTelemetryTool.csproj" />
   </ItemGroup>
 
